# election-stream-monitor

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NEXT_SESSION.md  PLANS.md  PR_SUMMARY_fastapi_boundary.md  README.md  SECURITY.md  conftest.py  package.json  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check_main_pr_consistency.py
.github/workflows/: ci.yml  weekly-validation.yml
data/: README.md
docs/: README.md  adding-an-alert-rule.md  adding-an-analyzer.md  api-stream-election-policy-task-list.md  api-stream-local-validation.md  api-stream-operational-inventory.md  architecture-decision-fastapi.md  architecture.md  contracts.md  data-models.md  detector-template.md  fastapi-boundary.md  frontend-architecture.md  release-versioning.md  reviewer-guide.md  session-model.md  stream-profile-product-brainstorm.md  testing-and-validation.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: apiErrors.mjs  bridgeHandlerRegistry.mjs  bridgeHandlerRegistry.test.mjs  bridgeResponses.mjs  bridgeResponses.test.mjs  fastApiClient.mjs  fastApiClient.test.mjs  fastApiFallback.mjs  fastApiFallback.test.mjs  fastApiProcessManager.mjs  fastApiProcessManager.test.mjs  fastApiRuntimePolicy.mjs  fastApiRuntimePolicy.test.mjs  fastApiStartupOrchestrator.mjs  fastApiStartupOrchestrator.test.mjs  hlsProxy.mjs  hlsProxy.test.mjs  localMediaRequestPolicy.mjs  localMediaRequestPolicy.test.mjs  (+7 more)
scripts/: api_stream_local_validation.py
src/: alert_rules.py  analyzer_contract.py  analyzer_registry.py  config.py  data_io.py  detector_generation_notes.py  detectors.py  export_detector_catalog.py  logger.py  main.py  path_utils.py  playback_sources.py  playlist_collector.py  playlist_utils.py  processor.py  session_cli.py  session_io.py  session_models.py  session_runner.py  session_runner_discovery.py  session_runner_execution.py  session_runner_lifecycle.py  session_runner_progress.py  session_runner_terminal.py  session_service.py  source_validation.py  stores.py  stream_loader.py  stream_loader_contracts.py  stream_loader_fakes.py  stream_loader_http_hls.py  stream_loader_http_hls_fetch.py  stream_loader_http_hls_materialize.py  stream_loader_http_hls_playlist.py  stream_loader_http_hls_policy.py  time_utils.py  video_to_ts_segments.py
tests/: alert_rules_test_support.py  api_boundary_test_support.py  conftest.py  e2e_session_test_support.py  http_hls_test_support.py  local_hls_test_support.py  session_runner_api_stream_test_support.py  stream_loader_http_hls_test_support.py  test_alert_rules.py  test_alert_rules_black.py  test_alert_rules_blur.py  test_analyzer_registry.py  test_api_boundary.py  test_api_boundary_contracts.py  test_api_boundary_playback.py  test_api_boundary_sessions.py  test_api_boundary_validation.py  test_api_stream_expectations.py  test_api_stream_local_validation.py  test_api_stream_real_smoke.py  test_config.py  test_data_io.py  test_detectors.py  test_detectors_integration.py  test_e2e_local_session.py  test_e2e_local_session_real_media.py  test_e2e_session_ground_truth.py  test_e2e_session_ground_truth_api_stream.py  test_e2e_session_ground_truth_local.py  test_logger.py  test_main.py  test_path_utils.py  test_playback_sources.py  test_processor.py  test_session_cli.py  test_session_cli_tooling.py  test_session_io.py  test_session_runner.py  test_session_runner_api_stream_basic.py  test_session_runner_api_stream_cancellation.py  (+23 more)
(+170 files in other folders)
