[project]
name = "election-stream-monitor"
version = "0.1.0"
description = "Local-first AI video monitoring system for election-related media sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "pandas>=3.0.1",
    "pycodestyle>=2.14.0",
    "pytest>=8.4.2",
    "pylint>=4.0.5",
    "python-ffmpeg>=2.0.12",
    "m3u8>=6.0.0",
    "pydocstyle>=6.3.0",
    "pylama>=8.4.1",
    "bandit>=1.9.4",
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pydantic>=2.13.1",
    "httpx>=0.28.1",
]

[tool.pylint.main]
init-hook = "import sys; from pathlib import Path; sys.path.insert(0, str(Path().resolve() / 'src'))"
persistent = false
